<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">OpenEMR</string>
    <string name="srv">http://opensourceemr.com</string>
    <string name="port">2099</string>
    <string name="debugging">0</string>
    <string name="settings">Openemr settings</string>
    <!-- Quit dialog -->
    <string name="no">No</string>
    <string name="quit">Quit</string>
    <string name="yes">Yes</string>
    <string name="really_quit">Are you sure you wish to exit.</string>
    <string name="sitedefault">default</string>
    <!-- URL's -->
    <string name="OpenemrStartPage">"file:///android_asset/Firstload.html"</string>
	<string name="OpenemrLogin">openemr/interface/login/login_frame.php</string>
	<string name="OpenemrMainPage">openemr/interface/main/main_screen.php</string>
	<string name="OpenemrPatientSummary">openemr/interface/patient_file/summary/demographics.php</string>
	<string name="OpenemrLeftNav">openemr/interface/main/left_nav.php</string>
	<string name="OpenemrEncounters">openemr/interface/patient_file/history/encounters.php</string>
	<string name="OpenemrSearch">openemr/interface/main/finder/patient_finder.php</string>
	<string name="OpenemrNewEncounter">openemr/interface/forms/newpatient/new.php</string>
	<string name="OpenemrNewPatient">openemr/interface/new/new.php</string>
	<string name="OpenemrCalendarSchedule">openemr/interface/main/calendar/index.php</string>
	<string name="OpenemrHtmNavigation">openemr/main/main_navigation.php</string>
	<string name="OpenemrMessages">openemr/interface/main/messages/messages.php</string>
	<string name="OpenemrLabResultsMessages">openemr/interface/main/messages/lab_results_messages.php</string>
	<string name="OpenemrAuthorizations">openemr/interface/main/authorizations/authorizations.php</string>
	<string name="OpenemrAuthorizationsFull">openemr/interface/main/authorizations/authorizations_full.php</string>
	<string name="OpenemrPatientIssues">openemr/interface/patient_file/summary/stats_full.php?active=all</string>
	<string name="OpenemrOfficeNotes">openemr/interface/main/onotes/office_comments_full.php</string>
	<string name="OpenemrAddressBook">openemr/interface/usergroup/addrbook_list.php</string>
	<string name="OpenemrOrdersResults">openemr/interface/orders/orders_results.php</string>
	<string name="OpenemrReportsIndex">openemr/interface/reports/index.php</string>
	<string name="OpenemrPendingFollowup">openemr/interface/orders/pending_followup.php</string>
	<string name="OpenemrPendingOrders">openemr/interface/orders/pending_orders.php</string>
	<string name="OpenemrProcedureStatistics">openemr/interface/orders/procedure_stats.php</string>
	<string name="OpenemrOrderTypesAndResults">openemr/interface/orders/types.php</string>
	<string name="OpenemrLabExchangeSystem">openemr/interface/orders/lab_exchange.php</string>
	<string name="OpenemrAddOrEditDrug">openemr/interface/drugs/add_edit_drug.php</string>
	<string name="OpenemrEditDrugLot">openemr/interface/drugs/add_edit_lot.php</string>
	<string name="OpenemrDestroyDrugLot">openemr/interface/drugs/destroy_lot.php</string>
	<string name="OpenemrDispenseDrug">openemr/interface/drugs/dispense_drug.php</string>
	<string name="OpenemrDrugInventory">openemr/interface/drugs/drug_inventory.php</string>
	<string name="OpenemrPrintNotes">openemr/interface/forms/CAMOS/notegen.php</string>
	<string name="OpenemrPatientEncounterForm">openemr/interface/forms/newpatient/view.php</string>
	<string name="OpenemrCreateWorkSchoolNotes">openemr/interface/forms/note/new.php</string>
	<string name="OpenemrViewPrintWorkSchoolNote">openemr/interface/forms/note/view.php</string>
	<string name="OpenemrNewDictation">openemr/interface/forms/dictation/new.php</string>
	<string name="OpenemrViewDictation">openemr/interface/forms/dictation/view.php</string>
	<string name="OpenemrOrderProcedure">openemr/interface/forms/procedure_order/new.php</string>
	<string name="OpenemrViewChangeProcedure">openemr/interface/forms/procedure_order/view.php</string>
	<string name="OpenemrReviewBodySystemsROS">openemr/interface/forms/ros/view.php</string>
	<string name="OpenemrReviewOfBodySystemsChecked">openemr/interface/forms/reviewofs/new.php</string>
	<string name="OpenemrReviewPatientVitalStats">openemr/interface/forms/vitals/view.php</string>
	<string name="OpenemrCreatePatientVitalStatsInstance">openemr/interface/forms/vitals/new.php</string>
	<string name="Openemradd_edit_issue">openemr/interface/patient_file/summary/add_edit_issue.php</string>
	<string name="Openemrpatient_history">openemr/interface/patient_file/history/patient_history.php</string>
	<string name="Openemrupload_dialog">openemr/interface/patient_file/upload_dialog.php</string>
	<string name="Openemrproblem_encounter">openemr/interface/patient_file/problem_encounter.php</string>
	<string name="Openemradd_edit_event">openemr/interface/main/calendar/add_edit_event.php</string>
	<string name="Openemrfind_appt">openemr/interface/main/calendar/find_appt_popup.php</string>
	<string name="Openemrbackup">openemr/interface/main/backup.php</string>
	<string name="Openemrbatchcom">openemr/interface/batchcom/batchcom.php</string>
	<string name="Openemraddrbook_edit">openemr/interface/usergroup/addrbook_edit.php</string>
	<string name="Openemrpatient_report">openemr/interface/patient_file/report/patient_report.php</string>
	<string name="Openemrfull_report.php">openemr/interface/patient_file/report/full_report.php</string>
	<string name="Openemrhistory_full">openemr/interface/patient_file/history/history_full.php</string>
	<string name="Openemrpnotes">openemr/interface/patient_file/summary/pnotes.php</string>
	<string name="Openemrimmunizations">openemr/interface/patient_file/summary/immunizations.php</string>
	<string name="Openemrfitness_status">openemr/interface/patient_file/summary/fitness_status.php</string>
	<string name="Openemrbrowse">openemr/interface/patient_file/summary/browse.php</string>
	<string name="Openemradd_transaction">openemr/interface/patient_file/transaction/add_transaction.php</string>
	<string name="Openemrpos_checkout">openemr/interface/patient_file/pos_checkout.php</string>
	<string name="Openemrnew_comprehensive">openemr/interface/new/new_comprehensive.php</string>
	<string name="OpenemrCodefinder">openemr/interface/patient_file/encounter/find_code_popup.php</string>
	<string name="OpenemrCodefinder2">openemr/interface/patient_file/encounter/coding_popup.php</string>
	<string name="OpenemrCodefinder3">openemr/interface/patient_file/encounter/search_code.php?type=CVX</string>

    <!-- Buttontxts -->
    <string name="button0txt">0</string>
    <string name="button1txt">1</string>
    <string name="button2txt">2</string>
    <string name="button3txt">3</string>
    <string name="button4txt">4</string>
    <string name="button5txt">5</string>
    <string name="button6txt">6</string>
    <string name="button7txt">7</string>
    <string name="button8txt">8</string>
    <string name="button9txt">9</string>
    <string name="button10txt">10</string>
    <string name="button11txt">11</string>
    <string name="button12txt">12</string>
    <string name="button13txt">13</string>
    <string name="button14txt">14</string>
    
    
    <string name="custom1">helppage</string>
    <string name="custom2">helppage</string>
    <string name="custom3">helppage</string>
    
    
    <string name="badcookie">Site ID is missing from session data!</string>
    
</resources>

