<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
   <PreferenceScreen android:key="ServerSettings" android:title="Server Settings">
    <PreferenceCategory android:title="Server Settings">
        <EditTextPreference android:defaultValue="@string/srv" android:title="IP or Domain" android:summary="Enter Location of Openemr server" android:key="IP"></EditTextPreference>
        <CheckBoxPreference android:defaultValue="true" android:title="Specify Port" android:summary="Check box to specify port" android:key="PortPref"/>
        <EditTextPreference android:dependency="PortPref" android:defaultValue="@string/port" android:title="Port Number" android:summary="Enter port of Openemr server" android:key="Portnum"></EditTextPreference>
    	<CheckBoxPreference android:title="Use SSL" android:summary="Check box if you use a secure server" android:key="Security"/>
		<EditTextPreference android:title="Site name" android:summary="Enter site name of your OpenEMR server" android:defaultValue="@string/sitedefault" android:key="Site"></EditTextPreference>    
    </PreferenceCategory>
    
    <PreferenceCategory android:title="Authentication" android:summary="Currently not functional">
        <EditTextPreference android:key="user" android:title="Username" android:defaultValue="username"></EditTextPreference>
        <EditTextPreference android:key="pass" android:title="Password" android:defaultValue="password"></EditTextPreference>
    </PreferenceCategory>
    </PreferenceScreen>
    
    
    
    
    
    <PreferenceCategory android:title="Startup Screen">
	    <ListPreference 
	    	android:key="startingpage"
	    	android:summary="Choose page that loads when starting app"
	    	android:title="Start Page"
	    	android:entries="@array/startupChoices"
            android:entryValues="@array/startupValues"
	    />
	    
    
    </PreferenceCategory>
    
    <PreferenceCategory android:title="Customization">
    <PreferenceScreen android:key="button_selection" android:title="Button Selection" android:summary="Change Quickbuttons">
    
  <PreferenceCategory android:title="Custom Addresses">
    <EditTextPreference android:key="customurl1" android:title="Custom Url 1" android:defaultValue="@string/custom1"></EditTextPreference>
    <EditTextPreference android:key="customurl2" android:title="Custom Url 2" android:defaultValue="@string/custom2"></EditTextPreference>
    <EditTextPreference android:key="customurl3" android:title="Custom Url 3" android:defaultValue="@string/custom3"></EditTextPreference>
    <!-- include from text file at this point -->
    
    </PreferenceCategory>
	<PreferenceCategory android:title="Choose your buttons">
		
		 <ListPreference
            android:key="button0pref"
            android:title="Top Row - Left"
            android:summary="Choose function"
            android:entries="@array/buttonchoices"
            android:entryValues="@array/buttonchoicevalues"
            
        /> 
	
	
        <ListPreference
            android:key="button1pref"
           	android:title="Top Row - Middle"
            android:summary="Choose function"
            android:entries="@array/buttonchoices"
            android:entryValues="@array/buttonchoicevalues"
            
        /> 



        <ListPreference
            android:key="button2pref"
            android:title="Top Row - Right"
            android:summary="Choose function"
            android:entries="@array/buttonchoices"
            android:entryValues="@array/buttonchoicevalues"
            
        /> 



        <ListPreference
            android:key="button3pref"
            android:title="2nd Row - Left"
            android:summary="Choose function"
            android:entries="@array/buttonchoices"
            android:entryValues="@array/buttonchoicevalues"
            
        /> 



        <ListPreference
            android:key="button4pref"
            android:title="2nd Row - Middle"
            android:summary="Choose function"
            android:entries="@array/buttonchoices"
            android:entryValues="@array/buttonchoicevalues"
            
        /> 



        <ListPreference
            android:key="button5pref"
            android:title="2nd Row - Right"
            android:summary="Choose function"
            android:entries="@array/buttonchoices"
            android:entryValues="@array/buttonchoicevalues"
            
        /> 



        <ListPreference
            android:key="button6pref"
            android:title="3rd Row - Left"
            android:summary="Choose function"
            android:entries="@array/buttonchoices"
            android:entryValues="@array/buttonchoicevalues"
            
        /> 



        <ListPreference
            android:key="button7pref"
            android:title="3rd Row - Middle"
            android:summary="Choose function"
            android:entries="@array/buttonchoices"
            android:entryValues="@array/buttonchoicevalues"
            
        /> 



        <ListPreference
            android:key="button8pref"
            android:title="3rd Row - Right"
            android:summary="Choose function"
            android:entries="@array/buttonchoices"
            android:entryValues="@array/buttonchoicevalues"
            
        /> 



        <ListPreference
            android:key="button9pref"
            android:title="4th Row - Left"
            android:summary="Choose function"
            android:entries="@array/buttonchoices"
            android:entryValues="@array/buttonchoicevalues"
            
        /> 



        <ListPreference
            android:key="button10pref"
            android:title="4th Row - Middle"
            android:summary="Choose function"
            android:entries="@array/buttonchoices"
            android:entryValues="@array/buttonchoicevalues"
            
        /> 



        <ListPreference
            android:key="button11pref"
            android:title="4th Row - Right"
            android:summary="Choose function"
            android:entries="@array/buttonchoices"
            android:entryValues="@array/buttonchoicevalues"
            
        /> 



        <ListPreference
            android:key="button12pref"
            android:title="Bottom Row - Left"
            android:summary="Choose function"
            android:entries="@array/buttonchoices"
            android:entryValues="@array/buttonchoicevalues"
            
        /> 


        <ListPreference
            android:key="button13pref"
            android:title="Bottom Row - Middle"
            android:summary="Choose function"
            android:entries="@array/buttonchoices"
            android:entryValues="@array/buttonchoicevalues"
            
        /> 



        <ListPreference
            android:key="button14pref"
            android:title="Bottom Row - Right"
            android:summary="Choose function"
            android:entries="@array/buttonchoices"
            android:entryValues="@array/buttonchoicevalues"
            
        /> 

    
    

       
        </PreferenceCategory>
        
         
    
    
    <Preference android:key="the_cookie"></Preference>
    <Preference android:key="got_session_cookie"></Preference>
            </PreferenceScreen>
        </PreferenceCategory>
    
<PreferenceCategory android:title="Debug">
    <CheckBoxPreference android:key="Debugging" android:summary="Warning: this slows down the app!" android:title="Enable Debugging" android:defaultValue="false"/>
    </PreferenceCategory>
   
    
</PreferenceScreen>
